tests/include_warnings_server/include_warnings_server.exp
EMPTY FLOWCONFIG


Check Without --include-warnings
Error: test.js:7
  7: if (x) {} //Error
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined


Found 1 error


Check With --include-warnings
Error: test.js:7
  7: if (x) {} //Error
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined

Warning: test.js:10
 10: if (x) {} //Warning
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined


Found 1 error and 1 warning


Check-contents Without --include-warnings
Error: test.js:7
  7: if (x) {} //Error
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined


Found 1 error


Check-contents With --include-warnings
Error: test.js:7
  7: if (x) {} //Error
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined

Warning: test.js:10
 10: if (x) {} //Warning
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined


Found 1 error and 1 warning


Status Without --include-warnings
Error: test.js:7
  7: if (x) {} //Error
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined


Found 1 error


Status With --include-warnings
Error: test.js:7
  7: if (x) {} //Error
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined

Warning: test.js:10
 10: if (x) {} //Warning
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined


Found 1 error and 1 warning




INCLUDE_WARNINGS FLOWCONFIG


Check Without --include-warnings
Error: test.js:7
  7: if (x) {} //Error
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined

Warning: test.js:10
 10: if (x) {} //Warning
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined


Found 1 error and 1 warning


Check With --include-warnings
Error: test.js:7
  7: if (x) {} //Error
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined

Warning: test.js:10
 10: if (x) {} //Warning
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined


Found 1 error and 1 warning


Check-contents Without --include-warnings
Error: test.js:7
  7: if (x) {} //Error
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined

Warning: test.js:10
 10: if (x) {} //Warning
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined


Found 1 error and 1 warning


Check-contents With --include-warnings
Error: test.js:7
  7: if (x) {} //Error
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined

Warning: test.js:10
 10: if (x) {} //Warning
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined


Found 1 error and 1 warning


Status Without --include-warnings
Error: test.js:7
  7: if (x) {} //Error
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined

Warning: test.js:10
 10: if (x) {} //Warning
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined


Found 1 error and 1 warning


Status With --include-warnings
Error: test.js:7
  7: if (x) {} //Error
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined

Warning: test.js:10
 10: if (x) {} //Warning
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    4: var x: ?number = 0;
               ^^^^^^ [1]: number
    4: var x: ?number = 0;
              ^^^^^^^ [2]: null or undefined


Found 1 error and 1 warning
